# maintainers-copilot

./: .env.example  .gitignore  AGENTS.md  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: dependencies.py  routes_attachments.py  routes_auth.py  routes_chat.py  routes_memory.py  routes_widgets.py
app/core/: config.py  exceptions.py
app/domain/: models.py  schemas.py
app/infra/: ai_clients.py  artifact_store.py  auth.py  blob_store.py  database.py  redaction.py  redis_client.py  storage_bootstrap.py  tracing.py  vault_client.py  vector.py
app/repositories/: attachment_repo.py  audit_repo.py  memory_repo.py  user_repo.py  widget_repo.py
app/services/: attachment_service.py  bootstrap_service.py  chat_service.py  conversation_snapshot_service.py  embedding_service.py  eval_artifact_service.py  memory_service.py  model_artifact_service.py  rag_service.py
chatbot_streamlit/: app.py
data_pipeline/: build_classification_splits.py  build_knowledge_base.py  classification_splits.json  create_rag_golden.py  fetch_issues.py  knowledge_base.json  label_issues.py  pandas_issues.json
demo/host/: index.html
docker/: api.Dockerfile  host.Dockerfile  migrate.Dockerfile  model_server.Dockerfile  streamlit.Dockerfile  widget.Dockerfile
docs/: ARCH.md  CODE_EXPLAINER.md  DECISIONS.md  EVALS.md  PROJECT_REFERENCE.md  REQUIREMENTS_CHECK.md  RUNBOOK.md  SECURITY.md
evals/: classification_eval.py  eval_thresholds.yaml  rag_eval.py  ragas_support.py  run_evals.py
evals/golden_sets/: classification_golden.json  rag_golden.json
migrations/: env.py
migrations/versions/: 001_initial.py  a808d9a62bd7_widget_config.py  c9f7a1b2d3e4_add_attachments_table.py  f4a1c2e3d4b5_add_user_token_version.py
model_server/app/: classifiers.py  main.py
notebooks/: pandas_distilbert_issue_classifier.ipynb
prompts/: README.md
prompts/rag/: README.md  answer_generation.md  judge_answer_relevancy.md  judge_faithfulness.md  (+1 more)
scripts/: bootstrap_vault.ps1  health_server.py  run_full_stack.ps1  vault-bootstrap.sh
shared/: __init__.py  observability.py
tests/: test_artifact_storage.py  test_attachments.py  test_auth.py  test_evals.py  test_model_server.py  test_redaction.py  test_widget_routes.py
widget/: README.md  package-lock.json  package.json  vite.config.js
(+29 files in other folders)
