[project]
name = "maintainers-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "chromadb>=1.5.9",
    "datasets>=4.8.5",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "fastapi-users>=15.0.5",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "google-generativeai>=0.8.6",
    "hvac>=2.4.0",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "redis>=7.4.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "tiktoken>=0.13.0",
    "uvicorn>=0.47.0",
]
